@@ -1,3 +1,13 @@
+2021-07-01  Per Arne  <pvollan@apple.com>
+
+        [macOS] Fix sandbox violations related to IOKit filtering
+        https://bugs.webkit.org/show_bug.cgi?id=227572
+        <rdar://78354215>
+
+        Reviewed by Brent Fulgham.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2021-07-01  Aditya Keerthi  <akeerthi@apple.com>
 
         [iOS] <select> menus should scroll to the selected option
